Bug 51572 - Extension Manager error message: msci_uno bridge error...
Summary: Extension Manager error message: msci_uno bridge error...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Extensions (show other bugs)
Version:
(earliest affected)
3.6.0.0.beta2
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:3.7.0 target:3.6.1
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-29 13:03 UTC by manj_k
Modified: 2012-07-25 17:54 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Extension Manager error message (9.47 KB, image/png)
2012-06-29 13:03 UTC, manj_k
Details

Note You need to log in before you can comment on or make changes to this bug.
Description manj_k 2012-06-29 13:03:36 UTC
Created attachment 63621 [details]
Extension Manager error message

The extension 'OKDict-1.0.0.oxt' [1] works fine with LibO 3.5.4/3.5.5.2
(on WinXP).

I cannot install 'OKDict-1.0.0.oxt' in LibO 3.6.0.0.beta2 
(via Extension Manager → Add...) due to the following error message:

[msci_uno bridge error] UNO type of C++ exception unknown: "CLuceneError", RTTI-name=".?AVCLuceneError@@"!

[1] http://www.kilargo.com/en/products/okdict
Comment 1 Caolán McNamara 2012-06-29 13:24:04 UTC
If you desperately need to get it to work and you unzipped OKDict-1.0.0.oxt and  edited META-INF/manifest.xml and removed the lines...

  <manifest:file-entry manifest:media-type="application/vnd.sun.star.help" 
                       manifest:full-path="help"/>

and rezipped it up again that it might then work.

This is a window only extension. I hacked a copy of it to install under Linux  (obviously non-functional then) to see if the help imported fine there and it  does. So it not as simple as e.g. broken help, its something windows-specific
Comment 2 manj_k 2012-06-29 14:29:49 UTC
(In reply to comment #1)

I unzipped OKDict-1.0.0.oxt and
edited META-INF/manifest.xml and removed the lines...

  <manifest:file-entry manifest:media-type="application/vnd.sun.star.help" 
                      manifest:full-path="help"/>
 
and rezipped it up again.

The modified extension has been installed without error message and works well now (w/o help).
Comment 3 Florian Reisinger 2012-07-07 10:31:02 UTC
Works with beta 3
Comment 4 manj_k 2012-07-07 12:12:08 UTC
(In reply to comment #3)
> Works with beta 3

Really? Do you have installed and tested the original extension?

No, the original extension doesn't work for me with LibO 3.6.0.0.beta3.
The workaround with the modified extension (w/o the extensions built-in help) is satisfactory for me. 

The significant problem: You'll get an infinite crash loop, once you have installed the original extension. LibO cannot be started any more, and the extension cannot be removed properly.

I am closing this bug as NOTOURBUG, because other extensions (like 'LanguageTool 1.8', or 'History Master 1.1.1') don't have this bug with their built-in help.
Comment 5 Caolán McNamara 2012-07-09 12:45:15 UTC
FWIW, I installed 3.6.0beta3 on a windows box and installed the original extension without the error. Not sure why there's that discrepancy. I'll add in something to catch that exception and extract the error message, which should resolve this even though I can't reproduce it
Comment 6 Not Assigned 2012-07-09 12:50:35 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4c912d3d8bd1ae01131e90fb4a2d8371a53ee888

Resolves: fdo#51572 catch CLuceneError throws and extract the error message
Comment 7 manj_k 2012-07-10 16:19:02 UTC
Thanks, Caolán,
tested (on Win XP 32b) w/
LibO-Dev_3.7.0.0.alpha0+
W2008R2@20-With-Symbol-Bytemark-Hosting MASTER
pull time 2012-07-10 09:04:32
core:a8fb1a123f6c46eed611dbaea699624ea0b7962b.

The extension has been installed without error message.
'OKDict-1.0.0.oxt' works fine, and the built-in help is available.
Comment 8 Not Assigned 2012-07-25 17:54:17 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e906bcc0c976a8565d05fbf6ef5cdda01642e611&g=libreoffice-3-6

Resolves: fdo#51572 catch CLuceneError throws and extract the error message


It will be available in LibreOffice 3.6.1.