Resolves: fdo#51572 catch CLuceneError throws and extract the error message

I can't reproduce fdo#51572, but catching the exception in
HelpIndexer::indexDocuments should resolve it anyway and make it non-fatal.
Collect the error message for retrieval via HelpIndexer::getErrorMessage

Change-Id: Id557b9f5ff968c398f76969591f5ee765e56aa5a
(cherry picked from commit 4c912d3d8bd1ae01131e90fb4a2d8371a53ee888)

Signed-off-by: Michael Stahl <mstahl@redhat.com>